    changelog template.
  * Added support for <AUTHOR> tag in copyright template.
  * Deleted some old stuff.
  * Replaced python-syck dependence by a newer python-yaml.
  * The example section in the info file of the skeleton by default couldn't
    have multiple words.
  * Fixed almost all lintian warnings coming from this debian package and the
    debian templates for gcs.

 -- Enrique Hernández Bello <quique@osl.ull.es>  Sat, 06 Feb 2010 02:57:24 +0000

gcs (0.3.20) jaunty; urgency=low

  * Added Provides: control's field support

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Wed, 17 Jun 2009 11:06:26 +0200

gcs (0.3.19) jaunty; urgency=low

  * Added Replace: control's field support

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Mon, 15 Jun 2009 10:32:06 +0200

gcs (0.3.18) jaunty; urgency=low

  * Fixed the copy of links which need to be pointing to file that doesn't
    exist yet. Like relative links on /etc/skel.

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Mon, 11 May 2009 17:12:58 +0200

gcs (0.3.17) jaunty; urgency=low

  * Moved he changelog version from hardy to jaunty
  * Updated the debhelper version and the compatibility in templetes
  * Changed architecture to all because actually this is for metapackages and nothing is going to be compiled in it
  * Updated the year for the copyright
  * Updated Guadalinex version on the skel
  * TODO file added

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Thu, 12 Mar 2009 22:06:49 +0100

gcs (0.3.16) hardy; urgency=low

  * Changed the version style to v[Guadalinex version].

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Thu, 27 Mar 2008 00:59:12 +0100

gcs (0.3.15) hardy; urgency=low

  * Changed standards-version to current 3.7.3

 -- J. Félix Ontañón <fontanon@emergya.es>  Wed, 26 Mar 2008 10:40:12 +0000

gcs (0.3.14) hardy; urgency=low

  * Initial release for Guadalinex v5 purposes.
  * Updated templates.
  * Added dependency python-support (hardy needed).
