@@ -8,5 +8,8 @@ prerm_template: /usr/share/gcs/templates/prerm.template
 postrm_template: /usr/share/gcs/templates/postrm.template
 copyright_template: /usr/share/gcs/templates/copyright.template
 
-# Extensión en la que acaban los ficheros de configuración
+## Final extension for the configuration files.
 config_extension: .gcs
+
+## This variable change the base path where you want to store the diversions.
+# diverts_basepath: /diverts
